src/test/deca/lexicographie/valid/sansObjet/valid_int.deca
{
    int x = 1;
    int x = 1234;
    int x = 155513;
    int x = 156656;
}