src/test/deca/lexicographie/invalid/sansObjet/invalid_print.deca
{
    print("x = 123123123123123123);
}